docs/0.7/_sources/api/gammapy.image.SkyImage.rst.txt
SkyImage
========

.. currentmodule:: gammapy.image

.. autoclass:: SkyImage
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SkyImage.center
      ~SkyImage.center_pix
      ~SkyImage.distance_image
      ~SkyImage.height
      ~SkyImage.is_mask
      ~SkyImage.width

   .. rubric:: Methods Summary

   .. autosummary::

      ~SkyImage.assert_allclose
      ~SkyImage.contains
      ~SkyImage.convolve
      ~SkyImage.coordinates
      ~SkyImage.coordinates_pix
      ~SkyImage.copy
      ~SkyImage.crop
      ~SkyImage.cutout
      ~SkyImage.downsample
      ~SkyImage.empty
      ~SkyImage.empty_like
      ~SkyImage.fill_events
      ~SkyImage.footprint
      ~SkyImage.from_image_hdu
      ~SkyImage.from_wcs_nd_map
      ~SkyImage.info
      ~SkyImage.lookup
      ~SkyImage.lookup_max
      ~SkyImage.lookup_pix
      ~SkyImage.pad
      ~SkyImage.paste
      ~SkyImage.plot
      ~SkyImage.read
      ~SkyImage.region_mask
      ~SkyImage.reproject
      ~SkyImage.show
      ~SkyImage.smooth
      ~SkyImage.solid_angle
      ~SkyImage.threshold
      ~SkyImage.to_image_hdu
      ~SkyImage.to_quantity
      ~SkyImage.to_sherpa_data2d
      ~SkyImage.to_wcs_nd_map
      ~SkyImage.upsample
      ~SkyImage.wcs_pixel_scale
      ~SkyImage.wcs_pixel_to_skycoord
      ~SkyImage.wcs_skycoord_to_pixel
      ~SkyImage.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: center
   .. autoattribute:: center_pix
   .. autoattribute:: distance_image
   .. autoattribute:: height
   .. autoattribute:: is_mask
   .. autoattribute:: width

   .. rubric:: Methods Documentation

   .. automethod:: assert_allclose
   .. automethod:: contains
   .. automethod:: convolve
   .. automethod:: coordinates
   .. automethod:: coordinates_pix
   .. automethod:: copy
   .. automethod:: crop
   .. automethod:: cutout
   .. automethod:: downsample
   .. automethod:: empty
   .. automethod:: empty_like
   .. automethod:: fill_events
   .. automethod:: footprint
   .. automethod:: from_image_hdu
   .. automethod:: from_wcs_nd_map
   .. automethod:: info
   .. automethod:: lookup
   .. automethod:: lookup_max
   .. automethod:: lookup_pix
   .. automethod:: pad
   .. automethod:: paste
   .. automethod:: plot
   .. automethod:: read
   .. automethod:: region_mask
   .. automethod:: reproject
   .. automethod:: show
   .. automethod:: smooth
   .. automethod:: solid_angle
   .. automethod:: threshold
   .. automethod:: to_image_hdu
   .. automethod:: to_quantity
   .. automethod:: to_sherpa_data2d
   .. automethod:: to_wcs_nd_map
   .. automethod:: upsample
   .. automethod:: wcs_pixel_scale
   .. automethod:: wcs_pixel_to_skycoord
   .. automethod:: wcs_skycoord_to_pixel
   .. automethod:: write
